<resources>
    <string name="app_name">Restaurant Inspector</string>
    <string name="coordinates">GPS Coordinates: %1$f, %2$f</string>
    <string name="number_crit_issues"># of Critical Issues: %1$d</string>
    <string name="number_non_crit_issues"># of Non-Critical Issues: %1$d</string>
    <string name="no_inspections_yet">No inspections yet.</string>
    <string name="number_of_issues">Number of issues: %1$d</string>
    <string name="no_inspections_so_far">No inspection so far</string>
    <string name="inspections">Inspections</string>
    <string name="inspections_details">Inspection Details</string>
    <string name="hazard_level">Hazard Level: %1$s</string>
    <string name="date_of_inspection_days_ago">Date of Inspection : %1$d  days ago.</string>
    <string name="date_of_inspection_with_params">Date of Inspection : %1$s %2$d</string>
    <string name="date_of_inspections">Date of Inspection :</string>
    <string name="sv1">Plans/construction/alterations substandard.</string>
    <string name="sv2">Operation of unapproved food premises.</string>
    <string name="sv3">No valid permit for this restaurant.</string>
    <string name="sv4">Permit not seen easily.</string>
    <string name="sv5">Food contaminated or unfit for consumption.</string>
    <string name="sv6">Food not processed in manner for safe eating.</string>
    <string name="sv7">Food not cooled properly.</string>
    <string name="sv8">Food not cooked or heated for safe eating.</string>
    <string name="sv9">Cold food not stored properly.</string>
    <string name="sv10">Hot food not stored properly.</string>
    <string name="sv11">Food obtained from unapproved sources.</string>
    <string name="sv12">Food not protected from contamination.</string>
    <string name="sv13">Food not thawed properly.</string>
    <string name="sv14">Frozen food not stored properly.</string>
    <string name="sv15">Food handling procedures not provided.</string>
    <string name="sv16">Utensils/food not sanitary.</string>
    <string name="sv17">Utensils/food not properly washed.</string>
    <string name="sv18">Improper sanitation.</string>
    <string name="sv19">Location contains pests.</string>
    <string name="sv20">Conditions observed may cultivate pests.</string>
    <string name="sv21">Food premise not sanitary.</string>
    <string name="sv22">Contact surfaces bad design/material</string>
    <string name="sv23">Contact surfaces not working.</string>
    <string name="sv24">Chemical cleansers - storage/labels.</string>
    <string name="sv25">Single use items used more than once.</string>
    <string name="sv26">Premise not maintained according to plan.</string>
    <string name="sv27">Items unrelated to food business on premise.</string>
    <string name="sv28">Live animals on premise.</string>
    <string name="sv29">Approved sanitation procedures not provided.</string>
    <string name="sv30">Inaccurate thermometers.</string>
    <string name="sv31">Proper handwashing station not present.</string>
    <string name="sv32">Bad handwashing practices.</string>
    <string name="sv33">Employees lack hygiene.</string>
    <string name="sv34">Employees smoking in not proper areas.</string>
    <string name="sv35">FOODSAFE level 1 or Equivalent not present.</string>
    <string name="sv36">Nobody has FOODSAFE level 1 or Equivalent.</string>
    <string name="inspectionType"></string>
    <string name="criticalIssues"></string>
    <string name="nonCriticalIssues"></string>
    <string name="nonCritical"># of non-Critical Issues:</string>
    <string name="criticalIssuesInput"># of Critical Issues:</string>
    <string name="inspectionTypeNotInput">Inspection Type:</string>
    <string name="dateOfInspection">TextView</string>
    <string name="attribution_links">
                    Logos: \n
                    <a href="https://company.timhortons.com/us/en/corporate/multimedia.php?type=0&amp;category=logo">timhortons.com</a>\n
                    <a href="https://www.qsrmagazine.com/news/get-glimpse-subways-brand-new-logo-branding">qsrmagazine.com/subway</a>\n
                    <a href="https://en.wikipedia.org/wiki/Starbucks">wikipedia.org/Starbucks</a>\n
                    <a href="https://ca.indeed.com/cmp/Save-On-Foods/reviews?fcountry=CA&amp;floc=Surrey%2C+BC">indeed.com</a>\n
                    <a href="https://sco.wikipedia.org/wiki/File:Pizza_Hut_logo.svg">wikipedia.org</a>\n
                    <a href="https://rogersarena.com/hospitality/panago-logo/">rogersarena.com</a>\n
                    <a href="https://news.mcdonalds.com/token-logo">mcdonalds.com</a>\n
                    <a href="https://leeyuenseafoodrestaurant.com/">leeyuenseafoodrestaurant.com</a>\n
                    <a href="https://en.wikipedia.org/wiki/Blenz_Coffee#/media/File:Blenz_Coffee_Logo.jpg">wikipedia.org</a>\n
                    \n
                    AdapterView OnClickListener\n
                    <a href="https://www.youtube.com/watch?v=69C1ljfDvl0&amp;t=441s">youtube.com</a>\n
                    \n
                    Joda Time\n
                    <a href="https://stackoverflow.com/questions/3802893/number-of-days-between-two-dates-in-joda-time">stackoverflow.com</a>\n
                    \n
                    Triangle Vector\n
                    <a href="https://clipartstation.com/warning-clipart-4/">clipartstation.com</a>\n
                    \n
                    Wrench Vector\n
                    <a href="https://www.nicepng.com/maxp/u2w7y3e6u2y3a9r5/">nicepng.com</a>\n
                    \n
                    Hot icon: (The link accurately doesn\'t take you to image, rather a  Google Image search does)\n
                    <a href="https://pngtree.com/so/lj-hot-on-icon">pngtree.com</a>\n
                    \n
                    Pest( cockroach ) Vector\n
                    <a href="http://icon-library.com/icon/pest-icon-3.html">icon-library.com</a>\n
                    \n
                    Hand-washing Vector\n
                    <a href="https://www.flaticon.com/free-icon/hand-wash_1216004">flaticon.com</a>\n
                    \n
                    Cooking Utensil Vector\n
                    <a href="https://www.freepik.com/free-icon/cooking_908165.html">freepik.com</a>\n
                    \n
                    Thermometer Indicator Vector:\n
                    <a href="https://www.onlinewebfonts.com/icon/541882">onlinewebfonts.com</a>\n
                    \n
                    Soap Hand-washing Vector:\n
                    <a href="https://ya-webdesign.com/imgdownload.html">ya-webdesign.com</a>\n
                    \n
                    Food Dish Logo ( for Contamination )\n
                    <a href="https://freeiconshop.com/icon/food-icon-outline-filled/">freeiconshop.com</a>\n
                    \n
                    Stop Hand Sign\n
                    <a href="https://www.pngkey.com/detail/u2a9o0y3t4y3y3i1_stop-sign-stop-hand-sign-svg/">pngkey.com</a>\n
                    \n
                    Unhygienic logo > fork/knife\n
                    <a href="https://www.flaticon.com/free-icon/restaurant_754938">flaticon.com</a>\n
                    \n
                    Unhygienic logo > Bacteria:\n
                    <a href="https://www.flaticon.com/free-icon/bacteria_191117">flaticon.com</a>\n
                    \n
                    Unfit Consumption> X sign:\n
                    <a href="https://muslimcouncil.org.hk/5-dos-5-donts-ramadan/">muslimcouncil.org.hk</a>\n
                    \n
                    Unfit Consumption > fork/knife:\n
                    <a href="https://www.onlinewebfonts.com/icon/480176">onlinewebfonts.com</a>\n
                    \n
                    Working Order> wrench:\n
                    <a href="https://www.pngkey.com/download/u2q8u2q8u2o0w7q8_this-icon-is-a-hand-holding-a-wrench/">pngkey.com</a>\n
                    \n
                    Siren Vector:\n
                    <a href="https://www.flaticon.com/free-icon/siren_819586">flaticon.com</a>\n
                    \n
                    Magnifying glass\n
                    <a href="https://pngriver.com/download-system-magnifying-glass-png-image-77125-for-designing-projects-114528/download-system-magnifying-glass-png-image-77125-for-designing-projects/">pngriver.com</a>\n
                    </string>
    <string name="attribution">Attribution</string>
    <string name="violationDescription101">Not Critical,Plans/construction/alterations not in accordance with the Regulation [s. 3; s. 4],Not Repeat</string>
    <string name="violationDescription102">Not Critical,Operation of an unapproved food premises [s. 6(1)],Not Repeat</string>
    <string name="violationDescription103">Not Critical,Failure to hold a valid permit while operating a food service establishment [s. 8(1)],Not Repeat</string>
    <string name="violationDescription104">Not Critical,Permit not posted in a conspicuous location [s. 8(7)],Not Repeat</string>
    <string name="violationDescription201">Critical,Food contaminated or unfit for human consumption [s. 13],Not Repeat</string>
    <string name="violationDescription202">Critical,Food not processed in a manner that makes it safe to eat [s. 14(1)],Not Repeat</string>
    <string name="violationDescription203">Critical,Food not cooled in an acceptable manner [s. 12(a)],Not Repeat</string>
    <string name="violationDescription204">Critical,Food not cooked or reheated in a manner that makes it safe to eat [s. 14(1)],Not Repeat</string>
    <string name="violationDescription205">Critical,Cold potentially hazardous food stored/displayed above 4 °C. [s. 14(2)],Not Repeat</string>
    <string name="violationDescription206">Critical,Hot potentially hazardous food stored/displayed below 60 °C. [s. 14(2)],Not Repeat</string>
    <string name="violationDescription208">Not Critical,Foods obtained from unapproved sources [s. 11],Not Repeat</string>
    <string name="violationDescription209">Not Critical,Food not protected from contamination [s. 12(a)],Not Repeat</string>
    <string name="violationDescription210">Not Critical,Food not thawed in an acceptable manner [s. 14(2)],Not Repeat</string>
    <string name="violationDescription211">Not Critical,Frozen potentially hazardous food stored/displayed above -18 °C. [s. 14(3)],Not Repeat</string>
    <string name="violationDescription212">Not Critical,Operator has not provided acceptable written food handling procedures [s. 23],Not Repeat</string>
    <string name="violationDescription301">Critical,Equipment/utensils/food contact surfaces not maintained in sanitary condition [s. 17(1)],Not Repeat</string>
    <string name="violationDescription302">Critical,Equipment/utensils/food contact surfaces not properly washed and sanitized [s. 17(2)],Not Repeat</string>
    <string name="violationDescription303"><![CDATA[Critical,Equipment/facilities/hot & cold water for sanitary maintenance not adequate [s. 17(3); s. 4(1)(f)],Not Repeat]]></string>
    <string name="violationDescription304">Not Critical,Premises not free of pests [s. 26(a)],Not Repeat</string>
    <string name="violationDescription305">Not Critical,Conditions observed that may allow entrance/harbouring/breeding of pests [s. 26(b)(c)],Not Repeat</string>
    <string name="violationDescription306">Not Critical,Food premises not maintained in a sanitary condition [s. 17(1)],Not Repeat</string>
    <string name="violationDescription307">Not Critical,Equipment/utensils/food contact surfaces are not of suitable design/material [s. 16; s. 19],Not Repeat</string>
    <string name="violationDescription308">Not Critical,Equipment/utensils/food contact surfaces are not in good working order [s. 16(b)],Not Repeat</string>
    <string name="low">Low</string>
    <string name="moderate">Moderate</string>
    <string name="high">High</string>
    <string name="none">None</string>
    <string name="hazard_level_filter">  Hazard Level:  </string>
</resources>